@@ -25,8 +25,6 @@ public class SantaHatItem extends CommonSantaHatItem {
 
 	@Override
 	public void appendHoverText(ItemStack stack, TooltipContext context, List<Component> tooltip, TooltipFlag tooltipFlag) {
-		tooltip.add(Component.translatable("tag.winterly.cosmetic").withStyle(ChatFormatting.GRAY));
-		tooltip.add(Component.nullToEmpty(" "));
 
 		if(!FabricLoader.getInstance().isModLoaded("trinkets")) {
 			Language lang = Language.getInstance();
@@ -34,7 +32,7 @@ public class SantaHatItem extends CommonSantaHatItem {
 
 			for(int i = 0; i <= 32; i++) {
 				if(lang.has(key + i)) {
-					tooltip.add(Component.translatable(key + i).toFlatList(Style.EMPTY.withColor(ChatFormatting.GRAY)).get(0));
+					tooltip.add(Component.translatable(key + i).toFlatList(Style.EMPTY.withColor(ChatFormatting.GRAY)).getFirst());
 				}
 				if(!lang.has(key + (i + 1))) {
 					break;
